Crash when setting a movie clip as a Camera background image. #74248

Closed
opened 2020-02-27 01:00:28 +01:00 by Evan Wilson · 5 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.83 (sub 5), branch master, commit date: 2020-02-26, hash: 1a1f2912e6
Worked: version: 2.83 (sub 3), branch: master, commit date: 2020-02-15 21:44, hash: 0716394423
I will bisect to get a more narrow range.

Short description of error
Setting a movie clip as a Camera background image, followed by switching to camera view, results in a crash.

Exact steps for others to reproduce the error
Factory start up.
Add a movie clip as a Camera background image.
Switch to Camera view.

Here is a movie clip you can use that I made while triaging another report.

Flag_over_Suzanne0001-0051.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.83 (sub 5), branch master, commit date: 2020-02-26, hash: `1a1f2912e6` Worked: version: 2.83 (sub 3), branch: master, commit date: 2020-02-15 21:44, hash: `0716394423` I will bisect to get a more narrow range. **Short description of error** Setting a movie clip as a Camera background image, followed by switching to camera view, results in a crash. **Exact steps for others to reproduce the error** Factory start up. Add a movie clip as a Camera background image. Switch to Camera view. Here is a movie clip you can use that I made while triaging another report. [Flag_over_Suzanne0001-0051.mp4](https://archive.blender.org/developer/F8374192/Flag_over_Suzanne0001-0051.mp4)
Author
Member

Added subscriber: @EAW

Added subscriber: @EAW
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

@fclem Bisected to 4e9fffc289

@fclem Bisected to 4e9fffc289

This issue was referenced by 80684ca41c

This issue was referenced by 80684ca41c52bce394fef81d3e70a2a9e14f661a

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-27 06:12:27 +01:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74248
No description provided.