Fix T74248: Crash using a movie clip for the camera background

Missing NULL check in recent half-float support.